fix middle names

--- a/content/2-present-practice/10.md
+++ b/content/2-present-practice/10.md
@@ -5,6 +5,6 @@ short_title:
 layout: essay
 order: 100
 contributor:
-  - first_name: Matteo
-    last_name: Rossi Doria
+  - first_name: Matteo Rossi
+    last_name: Doria
 ---
