--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -9,6 +9,6 @@ contributor:
     last_name: Seymour
   - first_name: Joanna
     last_name: Strombek
-  - first_name: Jos van Och
+  - first_name: Jos
     last_name: van Och
 ---
