--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -5,8 +5,8 @@ short_title:
 layout: essay
 order: 190
 contributor:
-  - first_name: Debra
-    last_name: Daly Hartin
+  - first_name: Debra Daly
+    last_name: Hartin
   - first_name: Stefan W.
     last_name: Michalski
   - first_name: Eric
