--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -6,6 +6,6 @@ short_title:
 layout: essay
 order: 210
 contributor:
-  - first_name: Cecil
-    last_name: Krarup Andersen
+  - first_name: Cecil Krarup
+    last_name: Andersen
 ---
