--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -6,8 +6,8 @@ short_title:
 layout: essay
 order: 260
 contributor:
-  - first_name: Claudia  
-    last_name: Alejandra Garza Villegas
-  - first_name: Naitzá
-    last_name: Santiago Gómez
+  - first_name: Claudia Alejandra Garza
+    last_name: Villegas
+  - first_name: Naitzá Santiago
+    last_name: Gómez
 ---
