--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -5,8 +5,8 @@ short_title:
 layout: essay
 order: 400
 contributor:
-  - first_name: Mary
-    last_name: Piper Hough
+  - first_name: Mary Piper
+    last_name: Hough
   - first_name: Stefan W.
     last_name: Michalski
 ---
