--- a/content/8-posters/42.md
+++ b/content/8-posters/42.md
@@ -6,6 +6,6 @@ short_title:
 layout: essay
 order: 420
 contributor:
-  - first_name: Joyce
-    last_name: Hill Stoner
+  - first_name: Joyce Hill
+    last_name: Stoner
 ---
