--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -7,8 +7,8 @@ order: 510
 contributor:
   - first_name: Laura
     last_name: Fuster-López
-  - first_name: Cecil
-    last_name: Krarup Andersen
+  - first_name: Cecil Krarup
+    last_name: Andersen
   - first_name: Nicolas
     last_name: Bouillon
   - first_name: Fabien
