--- a/content/8-posters/56.md
+++ b/content/8-posters/56.md
@@ -5,6 +5,6 @@ short_title:
 layout: essay
 order: 560
 contributor:
-  - first_name: Filip
-    last_name: Adrian Petcu
+  - first_name: Filip Adrian
+    last_name: Petcu
 ---
