--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -6,8 +6,8 @@ short_title:
 layout: essay
 order: 590
 contributor:
-  - first_name: Emanuel  
-    last_name: Sterp Moga
-  - first_name: Alicia
-    last_name: Sánchez Ortiz
+  - first_name: Emanuel Sterp  
+    last_name: Moga
+  - first_name: Alicia Sánchez
+    last_name: Ortiz
 ---
