--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -9,8 +9,8 @@ contributor:
     last_name: Carter
   - first_name: Lynn
     last_name: Chua
-  - first_name: Filzah
-    last_name: Mohd Amir
+  - first_name: Filzah Mohd
+    last_name: Amir
   - first_name: Ruby
     last_name: Awburn
   - first_name: Gillian
