--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -5,11 +5,11 @@ short_title: "Applied Mechanics and Structural Treatment"
 layout: essay
 order: 20
 contributor:
-  - first_name: Eric
-    last_name: Hagan
+  - first_name: "Eric"
+    last_name: "Hagan"
+keywords:
+abstract: "Paintings on canvas are composite structures with mechanical properties that are difficult to characterize due to many complicating issues: the wide range of artist materials and techniques, which vary by region and time; the changing properties of materials with age and environmental exposure; and the addition of conservation treatments. Paintings are also composed of viscoelastic materials, which means that properties such as stiffness and extensibility are time and temperature dependent. This large matrix of variables makes it impossible to characterize the behavior of all paintings in the same way that an engineer might describe a distinct structure under a narrow window of conditions and boundary constraints. Valuable information is instead derived from materials testing of representative samples, development of simplified models, and expert knowledge from past successes and failures. As a result of the complexity, heuristics is often applied in conservation treatments. This paper provides a generalized overview of the mechanical behavior of paintings in tension and describes trends that help to refine the heuristics approach. The discussion is presented in the context of a viscoelastic (time-dependent) material model rather than elastic-plastic in order to highlight key concepts."
 ---
-
-#
 
 ## Introduction
 
@@ -27,7 +27,7 @@ A pertinent example of the engineering method is found in the renowned body of r
 
 The aim of this paper is to revisit some key concepts in the time-dependent mechanical behavior of paintings, as a supplement to fundamental knowledge of mechanics. The concepts relate to many of the treatment methods used in practice where material behavior is altered by changing different parameters. Detailed theory and test results are presented elsewhere; therefore, focus is given to generalized trends for clarity. A brief review of lining effects on stiffness and stress relaxation of painting is also provided to complement a more in-depth discussion regarding the Canadian Conservation Institute (CCI) Lining Project ([[Daly Hartin et al. 2011]]).
 
-### *Mechanical Response of Paintings in Tension*
+### Mechanical Response of Paintings in Tension
 
 #### *Stress-strain curves*
 
