--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -1,16 +1,180 @@
 ---
 label: "4"
-title: "Lining at the National Maritime Museum and at the Courtauld Institute of Art: Past and Present"
-short_title:
+title: "Lining at the National Maritime Museum and at the Courtauld Institute of Art"
+subtitle: "Past and Present"
+short_title: "Lining at NMM and CIA"
 layout: essay
 order: 40
 contributor:
   - first_name: Camille
     last_name: Polkownik
+    title: Paintings Conservator
+    affiliation: Hamilton Kerr Institute, University of Cambridge
   - first_name: Clare
     last_name: Richardson
+    title: Senior Lecturer
+    affiliation: Courtauld Institute of Art
   - first_name: Maureen
     last_name: Cross
+    title: Senior Lecturer
+    affiliation: Courtauld Institute of Art
   - first_name: Sarah
     last_name: Maisey
+    title: Senior Remedial Conservator for Paintings
+    affiliation: National Trust
+abstract: Since the 1970s, the Courtauld Institute of Art (CIA) and Royal Museums Greenwich (RMG) (formerly the National Maritime Museum \[NMM\]) have been at the forefront of developments in lining methods, including research and practice using new adhesives including PVA, Beva 371, and synthetic wax-resin. The RMG worked closely with Stephen Rees Jones and Gerry Hedley from the Technology Department of the Courtauld to adopt their innovative methods, including lining using a vacuum hot table and vacuum envelopes, working together to develop the way paintings would be lined in the future. The present study reexamines archival materials related to the Greenwich Lining Conference and subsequent practical treatments undertaken in the CIA and RMG in the 1970s and 1980s. The authors explore the impact of the conference on contemporary practice, and a small group of case-study paintings is presented to evaluate the success and longevity of these treatments after forty to fifty years on display in museums or in storage.
 ---
+
+## Introduction
+
+From the 1970s onwards, the National Maritime Museum (NMM), now Royal Museums Greenwich (RMG), and Courtauld Institute of Art (CIA) were at the forefront of UK developments in lining methods and the use of modern adhesives. NMM conservator Westby Percival-Prescott worked closely with Professor Stephen Rees-Jones and Gerry Hedley at the Courtauld to adopt their innovative methods, including the use of a vacuum hot table and vacuum envelope for lining ([[Percival-Prescott 2003a]]).
+
+As part of the Getty Foundation’s Conserving Canvas initiative, CIA and RMG collaborated once again to explore lining methods and our common history of lining. The first part of this collaborative project invited an expert panel of liners from the UK and Europe to review the condition of seventeen paintings from the two collections that had received structural treatment in the late twentieth century (see the Appendix at the end of this paper).[^1] We were interested to assess the longevity of the modern lining methods used in order to inform collections care for the future. Alongside this work, and to establish the structural conservation history of both institutions from the 1970s onwards, a survey of all treatment reports was undertaken, and each institution’s conservators were interviewed.
+
+Of the seventeen paintings (see Appendix) examined by our experts, the majority remained in excellent structural condition, as might be expected, as the treatments were between twenty and fifty years old. Reviewing the treatment documentation alongside the paintings highlighted the change in attitudes towards structural conservation in the ensuing decades.
+
+## National Maritime Museum
+
+The NMM collection contains approximately four thousand paintings. In 1960, Percival-Prescott joined the NMM and founded the conservation department in the Royal Observatory building ([[Bomford 2005]]). He was joined by Ronald Chittenden, who focused solely on structural conservation, and paintings conservator Gillian Lewis. Thanks to Percival-Prescott's intense interest in painting materials and his passionate views on ethical methods of conservation, his department built and developed an international reputation ([[Bomford 2005]]). When asked by Dr. Greenhill, then director of the NMM, for a research area that could culminate in a large conference, Percival-Prescott put forward the idea of the structural conservation of canvas paintings, with a particular focus on lining. This was the origin of the Comparative Lining Techniques conference, held in Greenwich, April 23–25, 1974 ([[Percival-Prescott 2003a]]). The conference had an extraordinary impact on the conservation profession, and Percival-Prescott’s keynote speech, “The Lining Cycle,” articulated the trend for minimalism in structural treatment that still prevails today ([[Percival-Prescott 2003b]]).
+
+From 1970 to 1974, Percival-Prescott, Lewis, and Chittenden travelled throughout Europe, the East Coast of America, and Russia, to learn more about lining, meeting experts and filming them at work. Upon return to the UK studios, they experimented with the new techniques, adhesives, and fabrics discovered abroad, and extensive (unpublished) peel tests were undertaken in the Engineering Research department of the Royal Naval College, a few of which still remain in the Percival-Prescott archive at the Hamilton Kerr Institute.[^2]
+
+### Trends and Patterns: Treatments
+
+To understand the trends and patterns in the use of adhesives and fabrics at NMM, treatment reports from 1963 to 2000 were reviewed and the information collated. Out of the 2,023 reports consulted, 447 included structural treatment of some sort (approximately 22% of all paintings treated).
+
+The impact of the 1974 conference was evident in the treatment data, but other factors influenced the types of structural work undertaken. Chittenden’s retirement as a dedicated liner in the early 1980s meant that his workload was absorbed into the work of other paintings conservators in the studio: Caroline Hampton and Sally Wakelin, who both joined in 1974, and Elizabeth Hamilton-Eddy, who joined in 1978. The move to the Feather’s Place conservation studios in 2000 resulted in the loss of the hot-vacuum table due to lack of space, and major structural treatments such as lining were sent out to private studios.[^3]
+
+When reviewing the treatment reports from 1965 to 2000, the impact of these various factors was evident: the number of linings diminishes, whereas strip-linings appear in 1974 and quickly become a regular occurrence ([**fig. 4.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-1)). Similarly, a change in thinking was noticeable, for example, in the introduction of other minimal or preventative treatments, such as loose-lining and local reinforcement (corners and edges, and tear-mending).
+
+### Trends and Patterns: Materials
+
+In terms of adhesives used for lining and strip-lining, the NMM shows a preference for a small number of adhesives and techniques, which were refined into streamlined processes ([**fig. 4.2**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-2)). Initially, wax-resin lining is the only method used. Linen was used almost exclusively,[^4] and reports mention combinations of AW2 or dammar resin with wax and elemi gum, or later, MS2 resin combined with wax, colophony, and elemi.[^5] These linings were almost all done on the hot table, using the prestretching technique and the vacuum envelope developed in-house ([[Chittenden, Lewis, and Percival-Prescott 2003]]). Chittenden’s reports were usually very brief, such as, “lined in the usual way” or “lined with satisfactory results.”[^6]
+
+From 1971 to 1973, five sturgeon glue linings were performed. These are rather rare in the UK and drew upon the team’s training from “masterly restorer Brianzev” in Russia ([[Percival-Prescott 2003a\|, viii]]). Reports for the 1971 treatment of George Knight’s *Cleopatra's Needle Being Brought to England,* 1877 (BHC0641), revealed that “sturgeon bladder adhesive” was selected because the work was “painted upon a white ground and of materials which would have yellowed and darkened had wax been used.”[^7] These linings were performed only prior to the conference and were quickly abandoned; studio notes and treatment reports convey the impression that the technique was difficult to master.[^8]
+
+Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics ([figs. 4.2](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-2) and [4.3](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth, beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ([[Boissonnas 1961]]), was used over a prolonged period (1973–81), in combination with wax-resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
+
+As surface deformations could not be addressed during a wax-resin or Beva lining, they had to be treated beforehand. The NMM developed the prestretching technique, first published at the 1974 conference, to introduce tension and address cupping and deformation out of plane ([[Chittenden, Lewis, and Percival-Prescott 2003]]). This technique was used routinely in the 1970s and 1980s.
+
+Loose-lining starts in the early 1970s, and sixteen paintings were loose-lined in 1975 using either TenCate or Fabrene, possibly in preparation for an exhibition. TenCate was used until 1986, after which it was replaced with polyester sailcloth. One painting was loose-lined with wax-impregnated cotton duck in 1974, possibly as an experiment around the time of the conference. Linen was used regularly for loose-lining, perhaps prioritizing aesthetics over mechanical properties for this purpose (see [**fig. 4.3**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-3)).
+
+### Case Studies
+
+Many of the paintings selected for assessment by the expert panel were paintings lined using wax-resin in the 1960s and 1970s, as well as some that were lined or strip-lined with Beva more recently. Among the paintings selected for examination were several of the seemingly experimental treatments undertaken immediately prior to the lining conference, which reflected the Greenwich team’s interest in learning new techniques. Fabrics included linen of a various weights, cotton duck, and black polypropylene fabric. As discussed below, two very large paintings were also among those selected: one by Philippe-Jacques de Loutherbourg and another by Carl Saltzmann, treated in 1973 and 1992, respectively ([**fig. 4.4**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-4)).
+
+An early example of the typical NMM method of wax-resin lining can be seen in the treatment of Matteo Perez d'Aleccio’s *The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,* 1656 (BHC0255). The painting was relined in 1967, and the treatment was deemed successful at the time. However, in 1989 the canvas was found to be sagging near the bottom edge, which necessitated removal from the stretcher and restretching. The painting was of a reasonably large size (137.2 x 193 cm) and was exhibited in the time between the two treatments in a fluctuating environment, so these issues were not felt to be particularly surprising.
+
+Due to failure of the previous lining along the top edge, de Loutherbourg’s *Defeat of the Spanish Armada, 8 August 1588* (BHC0264) was relined in 1973. The work was included in the exhibition accompanying the 1974 conference as an example of a contemporary lining ([**fig. 4.5**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-5)). A wax-resin relining followed the standard NMM litho paper prestretching ([[Chittenden, Lewis, and Percival-Prescott 2003]]). However, complications occurred in the process. Records indicate that the large size of the painting (214.6 x 278.1 cm) necessitated relining on the hot table in two parts. After some technical difficulties in heating the table to the necessary temperature, it was found that the lined half displayed cockling due to differential thermal expansion. The expert panel cited cockling as a common phenomenon when paintings were lined in sections and said that this could often be magnified over a large scale. Despite the documented difficulties, our experts agreed that the lining appeared to be performing well, and in the long term these issues did not appear to have a detrimental effect.
+
+Throughout the study, several examples of experimental lining fabrics were examined. Rowland Johan Robb Langmaid’s *HMS* Dido, Ajax *and* Orion *in Action Off Crete, 21 May 1941,* (BHC0678) was lined in 1973 using Beva and a black polypropylene fabric ([**fig. 4.6**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-6)). Although well adhered, the lining textile is now displaying signs of embrittlement and degradation, with splitting on the turnover edges. Another unusual choice was the wax-resin double lining on cotton duck with a Melinex film stuck to the reverse, which was used in the 1974 relining of Dominic Serres’s *Destruction of the American Fleet at Penobscot Bay, 14 August 1779*, late eighteenth century (BHC0425). Robert Luny’s *The East Indiaman* York *and Other Vessels,* 1788 (BHC3735) was lined in 1974 onto “post office bagging,” a fairly coarse linen that had been collected as a sample during the research travels prior to the conference.[^10]
+
+As indicated by the conservation records, the post-1974 conference years saw a general move away from wax-resin linings on linen and toward Beva 371 linings on synthetic fabrics. The relining of Carl Saltzmann’s *German Fleet Manoeuvres on High Seas* (BHC0648) in 1992, using Beva 371 on polyester sailcloth, exemplifies this trend. Prior to relining the painting had suffered from a poor mix of glue paste, which exhibited hard lumps, and the inexplicable inclusion of egg and eggshell. As with the de Loutherbourg, the painting’s vast size necessitated lining in two halves, which again resulted in substantial undulations. Once it was off the hot table it was noted that the lining was not well adhered in places, and a hand lining with local pressing was employed to address the problem. Despite the initial issues the lining was very successful, and today it is performing well, with little evidence of the undulations present before the 1992 treatment and only very slight slackness.
+
+Indeed, those reviewing these paintings in 2019 felt that the vast majority were in good condition and the linings and strip-linings were performing well. Aside from some experimentation around the time of the lining conference, the team at the NMM tended to employ tried-and-tested methods and materials that they developed gradually over the years. This consistent approach surely contributed to their calm ability to overcome obstacles when they arose, as demonstrated in the de Loutherbourg and Saltzmann treatments.
+
+## Courtauld Institute of Art
+
+The Courtauld collection was established by key bequests of old master paintings and Impressionist works in the 1930s. When the Department of Conservation and Technology was created in 1931, the collection’s paintings were first treated by the experienced tutors and by the students under their supervision. In 1998, Stephen Gritt was appointed as the first Courtauld Gallery conservator, and the majority of this workload shifted away from the Department.[^11] The students primarily worked on paintings from other museums, societies, and private collections that dated from the fourteenth century to modern periods, with treatments ranging from surface cleaning to full lining/relining.[^12]
+
+From the 1950s, the department was involved in lining research ([[Straub and Rees-Jones 1955]]). At the 1974 Greenwich conference, students Hedley, Stephen Hackney, and Alan Cummings presented their research work ([[Hedley, Hackney, and Cummings 2003]]). Vishwa Mehra was invited to the department on at least two occasions (1978 and 1981) to give workshops demonstrating his cold lining technique.[^13] From 1982 until his untimely death in 1990, Hedley was a lecturer focusing on, among other things, the mechanical properties of synthetic canvases as lining supports ([[Hedley and Villers 1982]]). The environment was thus favorable for experimentation and development of techniques and materials (e.g., [[Phenix and Hedley 1984]]).[^14]
+
+### Trends and Patterns: Treatments
+
+Two strands emerge in the Courtauld reports: the paintings from the Courtauld Gallery collection and the paintings from external collections. Out of the 1,023 reports consulted from 1968 to 1996, 124 included structural treatment of some description (approximately 12%). Only eighteen reports from before 1980 were found, so the pre-1980 areas on the graphs shown in figures here should be interpreted with caution due to the unknown quantity of missing reports. Pre-1980 practices were gathered through interviews with conservators studying or working at the Courtauld during this period.
+
+The vacuum envelope table developed by Hedley, Hackney, and Cummings was used from the 1970s until the early 1980s ([[Hedley, Hackney, and Cummings 2003\|, 83]]). In 1984, a commercially built lining table, based on the design created in the department in the 1950s, came in as a long-term loan, this was used until 1994. Subsequently a multipurpose suction table with air-flow capability and a conventional hot-plate top was acquired from Willard Conservation Ltd.[^15] Occasionally, hand linings were also undertaken.
+
+### Trends and Patterns: Adhesives and Fabrics
+
+CIA has a long history of using wax-resin. Waxes used were beeswax, bleached beeswax, or microcrystalline wax, combined with natural dammar or synthetic resins such as Ketone N or AW2. These mixtures were used exclusively for lining until the early 1970s, when Beva and polymer dispersion adhesives were introduced. The very last wax-resin lining was performed in 1990 (**fig. 4.7**).
+
+Beva was taken up shortly after the 1974 conference. Cummings and Hedley had a long conversation with Gustav Berger during the conference, and that discussion was key to the adoption of Beva at the Courtauld.[^16] PRIMAL AC-634 was introduced to the conservation world by Mehra in 1972 and began to be used at CIA soon after ([[Mehra 1972]]). It was used for cold linings until 1984, when research conducted in the department showed its poor aging properties ([[Howells et al. 1984]]). Plextol B500, also introduced by Mehra, was used for cold linings until 1992.
+
+Fabri-Sil, a Teflon-impregnated glass fiber with a silicon pressure adhesive, was introduced to CIA in the 1980s and studied by Alan Phenix as his student research project ([[Phenix and Hedley 1984]]\|, 84.2.39). This product, developed by Fieux, was used seven times at CIA from 1983 to 1989 ([[Fieux 1977]]). It was abandoned due the weakness of the bond even after solvent reactivation, and its high cost.[^17]
+
+In terms of lining fabrics, CIA experimented with different fabrics, almost entirely synthetics, before settling on polyester sailcloth, a fabric Hedley had thoroughly researched and tested ([**fig. 4.8**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-8)) ([[Hedley and Villers 1982, 154]]). Other polyester fabrics included Vylene and Permawear 122. In many treatment reports, lining fabrics were referred to as “polyester” or “polyester fabric,” and it is not possible to know precisely which fabrics were used.
+
+Glass fiber was used from 1975 until 1981, most likely for experimentation after the 1974 conference ([[Boissonnas 2003]]). There were also a few examples of marouflage onto aluminum honeycomb. Polypropylene was used from 1979 and abandoned by 1981. Lascaux P110, a textile with a similar appearance to linen but made of polyester, was used from 1991 until 1995.
+
+As at NMM, the adhesives used for strip-lining are Beva gel and film. The fabrics used for strip-linings are mostly synthetics, apart from one example in 1986 using linen. Synthetics used include Permawear 122, polyester sailcloth, and Lascaux P110.
+
+In terms of loose-lining fabrics, there is more variety than at NMM. While polyester sailcloth was adopted in 1984 and remains in use, other fabrics were also tested. Linen was used from 1985 until 1991 and could be combined with a lining onto synthetic fabric for a more sympathetic appearance from the reverse. Lascaux P110 took over linen from 1992 to 1995.
+
+### Case Studies
+
+Reviewing the Courtauld paintings with the expert panel, it was striking to see the widespread and enthusiastic adoption of modern lining fabrics and adhesives for the treatment of these works. The documentation of treatments, written in the context of a research and teaching institution, often gives a full insight into the decision-making processes and selection of materials.
+
+As already mentioned, very few paper records remain for the earliest treatments. For example, the 1969 marouflage of Lucien Pissarro’s *Le Brusq,* 1923 (P.1932.SC.322) onto aluminum was recorded only by the materials and date inscribed on the rigid support: “April 1969, 90% beeswax, 10% AW2 resin.” Similarly, the wax-resin lining of a fire-damaged painting attributed to Giovanni Francesco Barbieri, or Guercino,[^18] in 1976 is only recorded in a treatment database.[^19] This lining appears to have been carried out using cotton duck in a manner similar to that of the near-contemporaneous lining of the Serres *Penobscot Bay* painting at the NMM.
+
+While the marouflage appeared to be an extreme intervention, our expert panel remarked that this had been a popular “preventative” measure in the 1960s. Chief among the problems associated with marouflage was weave emphasis resulting from the unyielding nature of the secondary support, an unfortunate outcome in the treatment of the Pissarro. The painting appears structurally sound with no apparent justification for the marouflage. The work seemed to be an example of lining for preventative measures.
+
+In the 1980s, several Impressionist paintings, accessioned from the Princes Gate bequest, were treated before they went on display in the Courtauld Galleries for the first time ([[Brown 1981]]). All then nearly a century old, these unlined canvasses were suffering from planar distortion and embrittlement. Some paintings had large areas of unpainted ground and delicate impasto, which posed lining challenges. Each painting was treated with a different solution, which highlighted the speed of evolution of thinking in lining practice at the time, as well as the intellectual flexibility of the conservators.
+
+Paul Cezanne’s *Turning Road (Route Tournante),* 1905 (P.1978.PG.61) was treated in 1980 using a low-pressure, cold-lining technique learned from Mehra in 1978. The adhesive, Primal A-C64 thickened with Natrosol, was applied through a mesh screen. One particular concern was the danger of staining and potentially darkening the ground with the adhesive. The report describes painstaking spectrophotometer readings, taken before and after treatment. The lining fabric was polyester, Permawear 122, and the report contains correspondence with the manufacturer. The deformations out of plane ([**fig. 4.9a**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-9)) were treated prior to lining by misting with water and drying on the cold lining table at minimal pressure (8.5 cm water), repeated three times with local weighting. The treatment was deemed a success and was subsequently chosen to illustrate a book in Gerry Hedley’s memory ([[Hedley 1993]]). Although it was incorrectly described as a Plextol lining, the success of the flattening moisture treatment and the lining in retaining the improved surface is commented on in the picture caption. Our expert panel agreed the lining was extremely successful in terms of correcting overall distortion while keeping a very light, unlined feel ([**fig. 4.9b**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-9)). Only one area of lifting of the lining on the turnover edge was identified, but this was not felt to be an indicator of more widespread failure concerns.
+
+Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233) was treated the following year, in 1981, to address the buckling of the canvas recorded in raking light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture…the canvas was found to be extremely responsive.”[^20] They switched to using Beva with sailcloth at 60°C–65°C and using 12"Hg vacuum envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ([[Hedley and Villers 1982\|, 157]]). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes towards lining over the 38 years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
+
+Edgar Degas’s *Lady with a Parasol,* 1870–72 (P.1978.PG.87) was treated almost immediately after the Manet. The painting was first strip-lined using Permawear 122 and Beva, but during restretching the original canvas fractured along the turnover edge. At this point, close to the exhibition opening, it was decided to mend the tear locally and return to the painting after the show. The painting returned for treatment in 1983 in preparation for considerable travel as part of a loan to Japan and Australia, and the decision was taken to line the painting ([**fig. 4.10**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/fig-4-10)). Hedley, leading the treatment, selected Fabri-Sil, but adapted the process to incorporate solvent activation, which was concurrently investigated by Phenix in his research project ([[Phenix and Hedley 1984]]). Using solvent activation, the peel strength of Fabri-Sil increased to approximately match a “strong wax-resin” formulation. Despite the treatment being among the early Fabri-Sil linings, our inspection of the painting found that the experimental method performed well: the impasto looks crisp and sharp, and the ground layer appears unchanged by the adhesive, with the lining remaining well adhered throughout.
+
+## Conclusion
+
+Reflecting on past practice at both institutions, the impact that the sharing of knowledge had in the years surrounding the Greenwich lining conference was apparent. Both institutions were enthusiastic about adopting new methods, adhesives, and fabrics, underpinned by comparison with existing methods to ensure that new techniques were at least as good as old. Most treatments appear to have aged well thus far, although some adhesives and fabrics have unknown aging characteristics in the longer term.
+
+The variety of adhesives used by the NMM conservators was clustered around a very specific period: a few years before and after the 1974 conference. As organizers, the conservators wanted to explore all avenues of new materials and methods. The experimentation led to the elimination of unsuitable methods and materials, such as sturgeon glue linings and black polypropylene as lining support, and the refinement and adoption of methods and materials that fitted their collection and work ethos. The Courtauld showed how research conducted within the department informed choices of adhesives and fabrics.
+
+The rationale behind structural treatments was explored through interviews with conservators and by reading the archival documentation. Reviewing treatments with our expert panel highlighted how much attitudes have changed over time and the lasting influence of minimalism that was ushered in by the Greenwich conference. Nowadays, the inclination is to resist intervention until the point of complete failure. The conclusion drawn from the 2019 examination was to prolong the life of existing linings by shoring up failures at turnover edges, reactivating old glues, or feeding in adhesive for localized delamination. Future research will explore this topic further by revisiting paintings identified as in need of lining—but not treated in the 1970s due to time or budget constraints—to assess their condition now.
+
+## Acknowledgments
+
+The authors would like to thank the following persons and institutions. The Getty Foundation for funding this project. The expert panel: Simon Bobak and Tom Bobak (Bobak Conservation Studio, London), Elizabeth Hamilton-Eddy (conservator Emeritus at Royal Museums Greenwich), Trevor Cumine (private practice, London), and Tannar Ruuben (Metropolia University, Helsinki). The meeting participants: Rachel Turnbull and Alice Tate-Harte (English Heritage), Katey Twitchett-Young and Anna Cooper (Tate), Alice Aurand (freelance in Paris), Katya Belaia (National Trust), and Aisling Macken​ and Tom Barrow (RMG). The conservators interviewed for this project, in particular Gillian Lewis, Alan Cummings, and Alan Phenix. The conservation volunteers at the RMG for their assistance collating the NMM data.
+
+## Appendix
+
+[**Table 4.1**](file:///Users/RBarth/Desktop/Finalized%20files-Conserving-Canvas--72122-to%20prep%20for%20TR/4-Polkownik/table-4-1) lists the 17 paintings from the CIA and RMG collections that were examined by an expert panel for this study.
+
+{% backmatter %}
+
+## Notes
+
+{% endbackmatter %}
+
+[^1]: Meeting held July 15–16, 2019, at the CIA and RMG stores in London.
+
+[^2]: Gillian Lewis, interview conducted by Camille Polkownik, October 4, 2019, Westby Percival-Prescott Archive, Hamilton Kerr Institute, University of Cambridge, Whittlesford.
+
+[^3]: Elizabeth Hamilton-Eddy and Caroline Hampton, interview conducted by Camille Polkownik, September 19, 2019.
+
+[^4]: Lewis, interview.
+
+[^5]: Treatment report for BHC0636, 1967, mentions AW2/beeswax/elemi gum; treatment report for BHC0444, 1967–75, mentions AW2/wax; treatment report for BHC3019, 1968–69, mentions dammar/wax; treatment report for BHC3329, 1969-74, MS2/wax; treatment report for BHC3318, 1971, mentions colophony/wax; treatment report for BHC3283, 1978, mentions MS2/wax/colophony/elemi.
+
+[^6]: As seen in treatments for BHC3530 in 1972 and BHC2989 in 1971, respectively.
+
+[^7]: Treatment report for BHC0641.
+
+[^8]: Treatment report for BHC1674, Eduardo de Martino, *HMS* Edinburgh *on Anti-Torpedo Exercise,* 1887.
+
+[^9]: Lewis, interview. The recipe was found in treatment reports for BHC2515, BHC0301, BHC1818, BHC0294, BHC2685, and BHC0274.
+
+[^10]: Samples were slotted in a display book and are part of the archives of RMG’s paintings conservation studio.
+
+[^11]: Board of Studies Meeting Minutes, November 10, 1998. Conservation and Technology Department Archive, Courtauld Institute of Art, London.
+
+[^12]: University of London: Courtauld Institute of Art, 1998. *1997/98* *Annual Report*, 18–19.
+
+[^13]: David Wallace to D. Franklin, June 21, 1978, Information and Correspondence of Early Years of Diploma in the Conservation of Easel Painting Course, Conservation and Technology Department Archive, Courtauld Institute of Art, London.
+
+[^14]: Dr. Christina Young joined the department as a lecturer in 2000. Her contributions to lining practice at the Courtauld have been widely published and are outside the scope of this paper.
+
+[^15]: Robert Bruce Gardner to Jocelin Weldon (Weldon UK Charitable Trust), May 15, 1995, General Correspondence, Conservation and Technology Department Archive, Courtauld Institute of Art, London.
+
+[^16]: Alan Cummings, interview conducted by Camille Polkownik, October 11, 2019.
+
+[^17]: Alan Phenix, interview conducted by Camille Polkownik, October 2, 2019.
+
+[^18]: This painting does not have an inventory number as it has not been accessioned.
+
+[^19]: FileMaker Pro database, Conservation and Technology Department, Courtauld Institute of Art, London.
+
+[^20]: Treatment report for Edouard Manet, *Au Bal—Marguerite de Conflans en Toilette de Bal* (P.1978.PG.233).
