--- a/content/1-history/7.md
+++ b/content/1-history/7.md
@@ -1,10 +1,124 @@
 ---
 label: "7"
 title: "Sustainable Trajectories for Terminologies, Methods, and Materials in the Structural Treatment of Paintings on Fabric Supports"
-short_title:
+short_title: "Sustainable Trajectories"
 order: 70
 layout: essay
 contributor:
-  - first_name: Matthew
-    last_name: Cushman
+  - first_name: "Matthew"
+    last_name: "Cushman"
+    title: "Conservator of Paintings and Affiliated Assistant Professor"
+    affiliation: "Winterthur Museum, Garden & Library, and the University of Delaware"
+keywords: "sustainability, conservation terminology"
+abstract: "Emphasizing international inclusivity and valuing regional and traditional practices, this paper offers recommendations for sustainable practice. The development of a multilingual, collaborative lexicon is favored over a standard terminology in English. Frameworks are proposed for practical research, dissemination of treatment information, and preparing for future challenges of material availability."
 ---
+
+## Introduction
+
+In his essay “Three Days that Changed Conservation,” David Bomford reflected upon the circumstances surrounding the 1974 Conference on Comparative Lining Techniques and its status as an important inflection point in the history of paintings conservation: “It was the beginning of a new precision, a new refinement, and it heralded a new technical intelligence in targeting conservation treatments …. Greenwich was when conservation came of age” ([[Bomford 2017\|, 1]]). What followed was a proliferation of approaches to treatment, coincident adoption of new materials, and a need for supportive fundamental and practical research.
+
+The past forty-five years have seen technical refinements of traditional methods, changes in the ways that conservators communicate the nuances of structural treatment, engineering of new purpose-built equipment for lining and alternatives to lining, development of new approaches to lining, changes in material formulations, adoption of sophisticated research instrumentation, and increased international exchange of information. While the advances have been numerous, the challenges ahead are equally numerous and increasingly formidable. This paper attempts to anticipate some of these significant challenges and to provide a framework for sustainable collaborative efforts to address future difficulties.
+
+## The Current State of Terminology
+
+One of the efforts of the Greenwich conference proceedings was the production of a handbook of terms used in the lining of paintings—an attempt to define about three hundred terms so that conservators from different countries and different lining traditions and philosophies could communicate effectively. This handbook was reproduced for subsequent conferences and seminars, and it is included as a glossary in the volume republished nearly 20 years ago ([[Villers 2003b]]). Despite the handbook’s status as a key resource in the training of paintings conservators, and despite international efforts to standardize terminology in the realm of conservation of cultural heritage,[^1] Cecil Krarup Andersen found in 2012 that the frequency of deviations from terminology established in the Greenwich Handbook increased with the passage of time in English-language publications included in AATA ([[Andersen 2012]]).
+
+The reasons behind these deviations are many. Given the adoption of English as a lingua franca in conservation literature, Andersen and others have noted the persistence of English cognates in different lining traditions, resulting in a collection of terms having essentially the same meaning: lining, relining, doubling, and redoubling, for example. Additionally, the introduction of new materials and innovative approaches to treatment have given rise to adjustments to classical terminology and the creation of new terms and variants. Further confusion can result from techniques falling under umbrella terms while being fundamentally different procedures. For example, the thread-by-thread tear-mending techniques first described by Winfried Heiber ([[Heiber 2003]]), and adapted by Petra Demuth and others, have influenced the development of various bridging and reweaving techniques for the stabilization and reestablishment of tension in torn supports. Of the two, reweaving may be more consistent with Heiber’s approach, yet both approaches may be described as thread-by-thread tear mending or a modified Heiber technique.
+
+One might suggest that our terminology has sprawled due to the lack of an explicit, unified imperative for international consistency. Inconsistent terminology may be cause for alarm; however, this “problem” is a natural consequence of parallel research and practical innovation that leverages the material traditions of varied regional practice. The expansion of our shared lexicon and authors’ apparent agency to redefine accepted terminology suggests that the international community has engaged in rapid adoption of new techniques and materials to such a degree that flexibility has been valued over rigid language structures. To stifle experimental creativity by imposing specific linguistic constraints could strip some of the nuance from technical descriptions of practical applications—particularly if those communications originate from outside of English-speaking traditions. If the trajectory of modern structural treatment is founded upon flexible decision-making trees—an intentional move away from prescriptive treatment—then it is imperative that paintings conservators aim to embrace and understand the breadth of traditions and techniques that exist internationally.
+
+## International Collaboration as Sustainable Practice
+
+In the current global environment, with its mounting uncertainties due to climate change, political unrest, and public health crises, and given the limited resources allocated to the conservation of cultural heritage, conservators must seek out opportunities to create efficient practices. Shared knowledge, sustained longitudinal research, and the ability to anticipate future material challenges will have increased value in the decades ahead. Our best shot for rising to these demands is through international collaboration.
+
+### A Living, Multilingual Terminology
+
+Of course, conservators must be able to communicate the technical aspects of their work with precision and clarity, and we must be willing to make nuanced adjustments to our terminology with the accumulation of scientific, philosophical, and practical information—shifting away from idealistic “reversibility” in favor of the practical “retreatability,” and gaining a more granular understanding of increased transparency of oil paint films ([[Van Loon 2008]]) due to deterioration processes and through structural intervention ([[Froment 2019]]), for example. Although the adoption of English as the operating language imposes some structure for a shared terminology, doing so also inhibits the participation and investment of experts globally, and we risk the erosion of nuance with each translation. If conservators embrace international collaboration as a benchmark of sustainable practice,[^2] we will increase the probability of discovering new insights and relationships among differing international (and intergenerational) practices.
+
+An updated terminology for the structural treatment of paintings on fabric supports—and indeed for topics within the specialty of paintings conservation and across disciplines—could be produced in the following manner:
+
+1.  Designate an international working group dedicated to the project.
+
+2.  Within each participating country and language, accumulate terminology and definitions as used natively.
+
+3.  Generate thesaurus entries to describe parallel terminology across languages.
+
+4.  Translate terminology and definitions for those terms that have no apparent equivalent from language to language.
+
+5.  Identify key literature to be translated across languages.
+
+6.  Perform iterative editing and expansion of the resulting living document.
+
+This initiative would be a significant undertaking building upon and necessarily superseding efforts such as the Greenwich conference handbook of terms and the LMCR project spearheaded by the Associazone Giovanni Secco Suardo;[^3] however, the benefits and potential efficiencies should be apparent to the reader, and the greater understanding and respect for traditions and innovations outside of the English language would help to build a more inclusive international community.
+
+While parallels to medical fields might suggest that conservators should adopt a standardized lexicon, so much of the variation in our work is influenced by geography—the materials and techniques employed by the artist, the environmental conditions to which the painting has been subjected, and historical regional restoration practices—that a monolithic definition of best practice is neither reasonable nor sustainable. Rather, adopting a multilingual, multiregional approach to terminology would ensure that our common knowledge does not suffer an erosion of empirical nuance.
+
+### Ensuring a Sustained Pipeline of Applicable Research
+
+Our terminology is only as good as our ability to fully understand the material demands of a treatment, and our ability to execute effective treatments depends on accurate heuristics and decision-making as well as appropriate use of purpose-built equipment. Each of these parameters is developed and delineated through fundamental and practical research. Our understanding of material properties and environmental response, the development of technologies and equipment in support of treatment refinements, and the evaluation of treatment procedures all require collaboration between conservators and scientists. Scientists ensure that research methodologies are sound, and that the interpretation of data holds scientific merit, and conservators ultimately decide how applicable the scientific research is to their daily practice, wherein conservators sort materials and techniques qualitatively (e.g., “weak” versus “strong” and “sympathetic” versus “invasive,” for example) for specific use cases.
+
+A sustainable research pipeline for aspects of structural treatment might include the following:
+
+-   Distribution of research questions among multiple groups to accomplish as much as possible in an expedient manner
+
+-   Embedding of early and midcareer conservators and scientists into research groups to carry on projects when principal investigators retire or are otherwise unable to continue their work
+
+-   For materials research, aiming to describe the use limits of the material beyond ideal museum conditions
+
+-   Ensuring that research is not limited to high-tech or high-cost instrumentation, incorporating low-tech materials and qualitative, experiential observation whenever reasonable
+
+In all cases, diversifying our pool of researchers, supporting the work of nonscientists in scientific studies, and ensuring long-term continuation of research projects will require more diverse streams of funding and coordination across projects.
+
+### Expanding Publication of “Ordinary” Treatments
+
+Research only gets us so far toward understanding structural treatment. Ultimately, hands-on experimentation, practical treatment, and object-level study are supported by fundamental and practical research. A conservator’s ability to recalibrate their heuristic understanding of treatment options relies upon an accumulation of data: experiential, anecdotal, and peer reviewed. Unfortunately for everyday practice, the conservation treatment literature is overwhelmingly geared toward the extraordinary: iconic paintings, material curiosities, and technical challenges. It can be difficult for a conservator to know when a project or observation is appropriate for or worthy of publication. Thoughts that this treatment is not interesting enough for publication or this painting is not important enough for publication are counterproductive in the long term, resulting in collective blind spots in the conservation literature.
+
+A more sustainable and collaborative approach to this problem would be to encourage the publication of seemingly routine data about methods of manufacture and treatment procedures, either making room within established scholarly spaces or supporting new publication venues devoted to communications of “routine” treatments. This is an uncomfortable thought, however, for some practitioners and institutions, especially in the realm of conservation of modern and contemporary materials, wherein confidentiality is often key to the conservator-client (and conservator-client-dealer-foundation) relationship. We cannot expect colleagues to jeopardize their working relationships, but we should not feel satisfied by a discourse illustrated with redacted images and presentation slides with do-not-tweet warnings.
+
+A reasonable compromise that would provide some degree of confidentiality while enabling the aggregation of treatment data would be to encourage periodic publication of treatments within an institution or private practice over the course of five to ten years. These summaries would overcome the misconception that individual treatments may not be worthy of publication, while tracking adoption and use of techniques and materials. Moreover, such publications would provide opportunities to discuss successes and shortcomings of treatments both ordinary and extraordinary. Lastly, this initiative would generate opportunities for conservators to think critically about their work and how their philosophies evolve over time. In sum, a critical mass of such publications would provide enough information to allow the field to better describe use boundaries among different structural treatment options in different exhibition and storage environments. Of course, this proposal hinges upon the support of existing editorial boards and/or the foundation of one or more new journals.
+
+### Increasing Practitioners’ Command of Diverse Treatment Methodologies
+
+An outgrowth of the production of a new international terminology and broader publication of practical treatment information (and indeed, of the Conserving Canvas initiative) should be the increase of conservators’ capacity for understanding and commanding multiple approaches for structural treatment. The past few decades have seen a proliferation of new cleaning technologies aimed at greater specificity, efficacy ([[Ormsby et al. 2010]]), control ([[Tauber et al. 2018]]), and increased safety to the practitioner.[^4] Yet the same demand for specificity in structural treatment is seemingly lacking; a paintings conservator might be expected to utilize only a few structural treatment procedures each for humidification, consolidation, tear mending, and lining. One goal of modern structural treatment should be to work toward the understanding of and proficiency in multiple techniques to service different needs and to achieve differing effects.
+
+The ways in which we describe treatment parameters can be expanded by considering varied approaches. For instance, a more nuanced understanding of treatment possibilities makes it possible to better define one’s intent with a treatment: whether or not adhesive methods are required, and if they are, where within the structure of the painting one aims to localize the adhesive bond, and what is intended for the method of retreatability. From there, the choice of materials and the ability to control the conditions imposed upon the painting during treatment determines (in part) the success at realizing the intent of the treatment.
+
+An individual conservator, a training program, and a museum might have their own proficiencies when it comes to structural treatment; by relying upon each other, we are able to fill in knowledge gaps and develop formal and informal advisory groups to guide individual treatments and long-term practical advancement. An ancillary benefit of gaining proficiencies across several different types of structural treatment is an increased ability to adapt when working in nonideal conditions or when material formulations change.
+
+### Material Sustainability and Probable Impacts on Structural Treatment
+
+In recent years, sustainability has transformed from a buzzword to an urgent concern. Increased focus has been placed upon material sourcing, with specific attention paid to materials refined from petroleum and other nonrenewable resources. Other key factors in material sustainability are environmental impact (how a material influences the stability of various biomes) and human health and safety (how chronic and acute exposures affect organ function and how materials metabolize and bioaccumulate within the body). One consequence of pursuing sustainable materials and practices is the greening of our chemistry, either by choice or through governmental regulations.
+
+Of the various regulatory frameworks worldwide, the European Union’s Regulation, Evaluation, Authorization and Restriction of Chemicals (REACH) is a good predictor of materials to which conservators might lose access in the near future.[^5] Under REACH is a list of substances of very high concern (SVHC): a register of chemicals that are deemed problematic and have been proposed for restricted use or other regulations. Suppliers and manufacturers can receive authorizations to formulate substances containing restricted materials; however, if a manufacturer were to find a substitute chemical that performs similarly while being unrestricted, there is a strong likelihood that the formulation of the substance will change. For the purposes of structural treatment, conservators need to be aware of the current formulations of our common materials and the chemical similarities between components of conservation materials and those on the SVHC list.
+
+Although the number of changes to paintings conservation practice resulting from governmental regulations should be low, there are examples of anticipated changes that are of significant concern. Phthalates feature in general on the SVHC list,[^6] mostly because of the risk of oral exposure due to the presence of phthalate plasticizers in children’s toys and in plastic bottles. The most common occurrence of phthalates in paintings conservation is in the formulation of Beva 371 and Beva 371b, both of which include Cellolyn 21, a phthalate ester of rosin acids.[^7] Replacing Cellolyn 21 in the formulation of Beva products will likely change the tacking, setting, and melting temperatures of the adhesive.[^8] Phenol ethoxylates, a class of nonionic surfactants, are under increasing scrutiny.[^9] Nonylphenol ethoxylates, for example, are restricted materials under REACH, but they have been used in the past in formulations of acrylic dispersions. It is likely that the surfactant components of acrylic dispersions will undergo a series of substitutions, possibly resulting in different working properties and changes to the pH of acrylic dispersion formulations. Lastly, some of our common solvents have been deemed problematic, including many aromatic solvents. Any restrictions placed upon these solvents could have implications for reversibility of certain treatments and for the feasibility of some adhesive formulations.
+
+In addition to material substitutions due to governmental regulations, conservation materials extracted from threatened or endangered species may not be available in the future. Examples of these species include many types of sturgeon, from which protein glues can be extracted, and some algae species responsible for the production of agar-agar and agarose. Conservators need to be aware of the possibility of formulation changes. Not only do we have a moral obligation to comply with regulations, but we also have an ethical obligation to anticipate material changes and the impact such changes may have on retreatability of current treatments. Luckily, being prepared for changes in the name of sustainability can be accomplished by attempting to address all of the challenges highlighted above.
+
+## Conclusion
+
+Our ever-evolving understanding of the structural treatment of paintings on fabric supports is built upon nuance and experience expressed first in native tongues and shared across cultures thereafter. If conservators and scientists can work together to communicate effectively and efficiently, to explore the limits of our current techniques, to respect the expertise inherent in regional traditions, and to encourage fundamental and practical research within our international conservation framework, we will have followed sustainable and adaptable trajectories for progress. These collaborative efforts will be most effective if we avoid impulses toward secrecy and proprietarianism, embrace communications detailing treatments and studies, both routine and extraordinary—whether they be successes or failures—and we plan ahead for conditions where problematic or scarce materials need to be replaced. Thus, multilingual and multiregional inclusiveness will provide the field with a plurality of best practices to adopt, adapt, and evolve into the future.
+
+{% backmatter %}
+
+## **Notes**
+
+{% endbackmatter %}
+
+[^1]: For example, European Committee for Standardization CEN/TC 346/WG 1, General methodologies and terminology: <https://standards.cen.eu>.
+
+[^2]: International partnerships are among the United Nations’ seventeen Sustainable Development Goals: <https://www.un.org/sustainabledevelopment/sustainable-development-goals/>.
+
+[^3]: The Multilingual Technical Scientific Glossary in Conservation and Restoration was a multiphase project (2001–7) focused on the production of a common thesaurus in English, German, French, Italian, and Spanish. See <http://www.associazionegiovanniseccosuardo.it/?q=en/node/163>.
+
+[^4]: For several examples, see [[Angelova et al. 2017]].
+
+[^5]: <https://echa.europa.eu/regulations/reach/understanding-reach>.
+
+[^6]: At the time of this writing, eighteen different phthalate esters are included on the SVHC list.
+
+[^7]: See <http://cameo.mfa.org/wiki/Cellolyn>.
+
+[^8]: At the Conserving Canvas symposium, Michael Swicklik, senior conservator of paintings at the National Gallery of Art, in Washington, DC, related an anecdote from his time working with Gustav Berger wherein Berger explained how Beva 371 did not function as intended without the addition of Cellolyn 21.
+
+[^9]: At the time of this writing, twenty-seven different phenol ethoxylates are included on the SVHC list.
