--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -153,18 +153,18 @@ The idea that the original canvas will never be the same again after a lining is
 
 {% endbackmatter %}
 
-[^1]: . Acrylic adhesives are thermoplastic. Thus, gentle heat (about 50°C) is also sufficient to tackify the dry adhesive and create a bond.
+[^1]: Acrylic adhesives are thermoplastic. Thus, gentle heat (about 50°C) is also sufficient to tackify the dry adhesive and create a bond.
 
-[^2]: . European Confederation of Conservator-Restorers’ Organisations (E.C.C.O.),
+[^2]: European Confederation of Conservator-Restorers’ Organisations (E.C.C.O.),
 
     “Professional Guidelines I: The Profession” (2002): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_I.pdf; “Professional Guidelines II: Code of Ethics” (2003): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_II.pdf.
 
-[^3]: . *Panorama Mesdag* project (1986–1996). The *Panorama* was painted by Hendrik Willem Mesdag and workshop in 1881; it is 14.70 m high x 114.70 m in circumference ([[van der Donk, de Herder, and van Lier 1996]]). See also Panorama Mesdag Geschiedenis en restauratie van een schilderij zonder grenzen: https://www.npo.nl/close-up/11-07-2015/AT_2037854. While not technically a mist lining, the Beva 371 lining adhesive was flocked and the heat-activated bond was set using a low-pressure envelope developed by Jos van Och. This remains the largest known painting lined (vertically) in situ.
+[^3]: *Panorama Mesdag* project (1986–1996). The *Panorama* was painted by Hendrik Willem Mesdag and workshop in 1881; it is 14.70 m high x 114.70 m in circumference ([[van der Donk, de Herder, and van Lier 1996]]). See also Panorama Mesdag Geschiedenis en restauratie van een schilderij zonder grenzen: https://www.npo.nl/close-up/11-07-2015/AT_2037854. While not technically a mist lining, the Beva 371 lining adhesive was flocked and the heat-activated bond was set using a low-pressure envelope developed by Jos van Och. This remains the largest known painting lined (vertically) in situ.
 
-[^4]: . Email correspondence between Kate Seymour and Thomas Bernhofer, technical service manager, Coatings, SBU Functional Solutions, Synthomer, March 28, 2018. See also http://www.synthomer.com.
+[^4]: Email correspondence between Kate Seymour and Thomas Bernhofer, technical service manager, Coatings, SBU Functional Solutions, Synthomer, March 28, 2018. See also http://www.synthomer.com.
 
-[^5]: . Until recently, tests at SRAL have been empirical in nature, conducted on mock-ups or historical material (such as old, removed lining canvases or deaccessioned paintings). The lining process and specifications have been adjusted and tested for specific cases. Samples were analyzed between 2014 and 2017 by Dr. J. A. (Hans) Poulis (Director of The Adhesion Institute, TU Delft) and a team of interns at TU Delft, Aerospace Division as well as students from the University of Amsterdam as part of Master Thesis research. Research is continuing and will be published in due course.
+[^5]: Until recently, tests at SRAL have been empirical in nature, conducted on mock-ups or historical material (such as old, removed lining canvases or deaccessioned paintings). The lining process and specifications have been adjusted and tested for specific cases. Samples were analyzed between 2014 and 2017 by Dr. J. A. (Hans) Poulis (Director of The Adhesion Institute, TU Delft) and a team of interns at TU Delft, Aerospace Division as well as students from the University of Amsterdam as part of Master Thesis research. Research is continuing and will be published in due course.
 
-[^6]: . The toxicity of the solvents can also be considered. Personal protective equipment (PPE) can be used to safely work with toxic solvents. Environmental factors and sustainability issues may also influence solvent selection.
+[^6]: The toxicity of the solvents can also be considered. Personal protective equipment (PPE) can be used to safely work with toxic solvents. Environmental factors and sustainability issues may also influence solvent selection.
 
-[^7]: . “De-Mystifying Mist-Lining,” instructional and documentary movie about the mist-lining system (2020), produced by Benjamin Brack and Akkie Brack-Sewalt, Big Eye Productions: https://www.youtube.com/watch?v=jU-QwEfYt44&feature=emb_title.
+[^7]: “De-Mystifying Mist-Lining,” instructional and documentary movie about the mist-lining system (2020), produced by Benjamin Brack and Akkie Brack-Sewalt, Big Eye Productions: https://www.youtube.com/watch?v=jU-QwEfYt44&feature=emb_title.
